tests/errors/typechecker/require_string_array_give_empty_int_array.duck
fn main() {
    let x: String[] = Int[];
}
